# lambda-rust

./: Cargo.toml  README.md  prelude.lmd
src/: commands.rs  completion.rs  main.rs
src/lib/: lambda.rs  lexer.rs  lib.rs  parser.rs  runtime.rs
