[package]
name = "lambda-rust"
version = "0.1.0"
authors = ["Kristijan Rupić <krupic.2.0@gmail.com>"]

[dependencies]
rustyline = { git = "https://github.com/kkawakam/rustyline.git", rev = "7aee62b7e81ad7ebad2969896a179325d8a87e1a" } 
isatty = "0.1.8"

[lib]
name = "lambda_rust"
path = "src/lib/lib.rs"
